--- a/main.html
+++ b/main.html
@@ -8,7 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+  <nav>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About us</a></li>
+			<li><a href="#">Contact us</a></li>
+		</ul>
+	</nav>
+	<h3>3 random videos</h3>
+	<video controls> <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></source></video>
+	<video controls> <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"></source></video>
+	<video controls> <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
