--- a/main.html
+++ b/main.html
@@ -4,23 +4,36 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Semantic Navbar and Videos</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-  <nav>
-		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About us</a></li>
-			<li><a href="#">Contact us</a></li>
-		</ul>
-	</nav>
-	<h3>3 random videos</h3>
-	<video controls> <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></source></video>
-	<video controls> <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"></source></video>
-	<video controls> <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/
-	<script type="text/javascript" src="./script.js">
+    <script type="text/javascript" src="./script.js">
 </script>
+      <nav>
+		<ul>
+			<li>
+				<a href="#">Home</a>
+			</li>
+			<li>
+				<a href="#">About Us</a>
+			</li>
+			<li>
+				<a href="#">Contact Us</a>
+			</li>
+		</ul>
+	  </nav>
+	  <h1>3 random videos</h1>
+    <video width="300px" controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+    </video>
+	<video width="300px" controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4">
+    </video>
+	<video width="300px" controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4">
+    </video>
 
 </body>
 
